[gd_scene load_steps=5 format=2]

[ext_resource path="res://Attacks/DramaAttacks/DramaAttack2/dr_attack2.gd" type="Script" id=1]
[ext_resource path="res://player/heart.tscn" type="PackedScene" id=2]
[ext_resource path="res://team_stats/Spamton/Spamton.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "spawn_wave"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 840, 400 ), Vector2( 840, 170 ), Vector2( 840, 400 ) ]
}

[node name="DramaAttack2" type="Node2D"]
script = ExtResource( 1 )

[node name="BorderField" type="ColorRect" parent="."]
margin_left = 355.0
margin_top = 160.0
margin_right = 670.0
margin_bottom = 445.0

[node name="Field" type="ColorRect" parent="BorderField"]
margin_left = 5.0
margin_top = 5.0
margin_right = 308.0
margin_bottom = 279.0
color = Color( 0, 0, 0, 1 )

[node name="Area2D" type="Area2D" parent="BorderField"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 520, 300 )

[node name="Heart" parent="." instance=ExtResource( 2 )]
position = Vector2( 510, 290 )

[node name="WordSpawn" type="Node2D" parent="."]
position = Vector2( 840, 400 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="WordSpawn"]
anims/spawn_wave = SubResource( 1 )

[node name="Spamton" parent="WordSpawn" instance=ExtResource( 3 )]

[node name="WordSpawnTimer" type="Timer" parent="."]
wait_time = 0.7
autostart = true
